--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "target": "ES6",
         "module": "ES6",
         "newLine": "LF",
-        "sourceMap": true,
+        "sourceMap": false,
         "outDir": "build"
     },
 
