--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "target": "ES6",
         "module": "ES6",
         "newLine": "LF",
-        "sourceMap": false,
+        "sourceMap": true,
         "outDir": "build"
     },
 
@@ -12,7 +12,7 @@
     ],
 
     "exclude": [
-        "node_modules",                          // Exclude the 'node_modules' directory
-        "**/*.spec.ts"                           // Exclude test files (if any)
+        "node_modules",
+        "**/*.spec.ts"
     ]
 }
