--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,16 @@
     "compilerOptions": {
         "target": "ES6",
         "module": "ES6",
+        "moduleResolution": "Node",
+        // "baseUrl": "./src/",
         "newLine": "LF",
         "sourceMap": true,
         "outDir": "build"
     },
 
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "types/*.d.ts"
     ],
 
     "exclude": [
